# nginx-sentinel

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  sentinel_config.yaml
src/: firewall.rs  main.rs  parser.rs
